+ Info about ballance in accounts (exchanges, transfers, new payments)

--- a/src/main/resources/templates/addNewPayment.html
+++ b/src/main/resources/templates/addNewPayment.html
@@ -21,7 +21,10 @@
                     <select class="selectpicker form-control form-group" name="accountName"  th:required="required">
                         <option value="">Select account</option>
                         <div th:each="account: ${accounts}">
-                            <option th:value="${account.name}" th:text="${account.name+' ('+account.currencyName+') - '+account.description}"></option>
+                            <option th:value="${account.name}" th:text="${account.name} + ' - (' +
+                            ${#numbers.formatDecimal(ballances.get(account.id) , 1, 2, 'POINT')} + ' ' +
+                            ${account.currencyName} + ') - '+ ${account.description}">
+                            </option>
                         </div>
                     </select>
                     <select class="selectpicker form-control form-group" name="paymentCategoryName"  th:required="required">
@@ -57,8 +60,7 @@
     <div class="form-group">
         <label class="col-md-4 control-label"></label>
         <div class="col-md-8">
-            <button class="btn btn-primary" id="back" name="back" onclick="history.back()">Cancel</button>
-            <a class="btn btn-primary" href="/home" role="button">Home Page</a>
+            <a class="btn btn-primary" href="/accounting" role="button">Cancel</a>
         </div>
     </div>
 
@@ -69,3 +71,13 @@
 </div>
 </body>
 </html>
+
+
+<!--<option th:value="${account.name}" th:text="${account.name}" +-->
+<!--' - (' +-->
+<!--"${#numbers.formatDecimal(ballances.get(account.id) , 1, '', 2, 'POINT')}" +-->
+<!--' ('+-->
+<!--"${account.currencyName+-->
+<!--') - '+-->
+<!--account.description}">-->
+<!--</option>-->
