--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,40 +8,154 @@
     <title>Home Page</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" rel="stylesheet">
+    <meta name="google-site-verification" content="vamyONGQZ_-qGiK7pbzqhtPkjxevdNbTG2HUETKyszA" />
+
+    <style>
+        .form-container{
+            background: #ecf0f3;
+            font-family: 'Nunito', sans-serif;
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
+        }
+
+        .form-container .form-icon{
+            color: #0d6efd;
+            font-size: 55px;
+            text-align: center;
+            line-height: 100px;
+            width: 100px;
+            height:100px;
+            margin: 0 auto 15px;
+            border-radius: 50px;
+            box-shadow: 7px 7px 10px #cbced1, -7px -7px 10px #fff;
+        }
+
+        .form-container .title{
+            color: #0d6efd;
+            font-size: 25px;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            text-align: center;
+            margin: 0 0 20px;
+        }
+
+        .form-container .alert-success{
+            color: #198754;
+            font-size: 20px;
+            font-weight: 500;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            text-align: center;
+            margin: 0 0 0px;
+        }
+
+        .form-container .alert-danger{
+            color: #dc3545;
+            font-size: 20px;
+            font-weight: 500;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            text-align: center;
+            margin: 0 0 0px;
+        }
+
+        .form-container .form-horizontal .form-group{ margin: 0 0 25px 0; }
+
+        .form-container .form-horizontal .form-group label{
+            font-size: 15px;
+            font-weight: 600;
+            text-transform: uppercase;
+        }
+
+        .form-container .form-horizontal .form-control{
+            color: #333;
+            background: #ecf0f3;
+            font-size: 15px;
+            height: 50px;
+            padding: 20px;
+            letter-spacing: 1px;
+            border: none;
+            border-radius: 50px;
+            box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
+            display: inline-block;
+            transition: all 0.3s ease 0s;
+        }
+
+        .form-container .form-horizontal .form-control:focus{
+            box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
+            outline: none;
+        }
+
+        .form-container .form-horizontal .form-control::placeholder{
+            color: #808080;
+            font-size: 14px;
+        }
+
+        .form-container .form-horizontal .btn{
+            color: #fff;
+            background-color: #0d6efd;
+            font-size: 15px;
+            font-weight: bold;
+            text-transform: uppercase;
+            width: 100%;
+            padding: 12px 15px 11px;
+            border-radius: 20px;
+            box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px #fff;
+            border: none;
+            transition: all 0.5s ease 0s;
+        }
+
+        .form-container .form-horizontal .btn:hover,
+        .form-container .form-horizontal .btn:focus{
+            color: #fff;
+            letter-spacing: 3px;
+            box-shadow: none;
+            outline: none;
+        }
+    </style>
 
 </head>
 <body>
-<div align="center">
 
-    <form class="form-horizontal">
-        <fieldset>
+    <div class="container"><br></div>
 
-            <!-- Form Name -->
-            <legend th:inline="text">Hello, <b><span th:remove="tag" sec:authentication="name">thymeleaf</span></b>!</legend>
+    <div class="container-fluid">
 
-            <!-- Button (Double) -->
-            <div class="form-group">
-                <label class="col-md-4 control-label"></label>
-                <div class="col-md-8">
-                    <td th:if="${admin}">
-                        <a class="btn btn-danger" href="/admin" role="button">ADMIN</a>
-                    </td>
-                    <td th:unless="${admin}">
-                        <a class="btn btn-primary" href="/accounting" role="button">Accounting</a>
-                        <a class="btn btn-primary" href="/todo" role="button">To-Do List</a>
-                        <a class="btn btn-primary" href="/settings" role="button">Settings</a>
-                    </td>
-                    <a class="btn btn-primary" href="/logout" role="button">Sign Out</a>
-                </div>
+        <div class="col-md-4 offset-md-4">
+            <div class="form-container">
+                <!-- <div class="form-icon" ><img src="free-icon-save-money-3210072.png"></i></div> -->
+                <h3 class="title">Home accounting</h3>
+                <form class="form-horizontal" th:if="${admin}">
+                    <br>
+                    <a class="btn btn-danger" href="/admin" role="button">Go to Admin page</a>
+                </form>
+                <form class="form-horizontal" th:unless="${admin}">
+                    <br>
+                    <a class="btn btn-primary" href="/accounting" role="button">Accounting</a>
+                </form>
+                <form class="form-horizontal" th:unless="${admin}">
+                    <br>
+                    <a class="btn btn-primary" href="/todo" role="button">To-Do List</a>
+                </form>
+                <form class="form-horizontal" th:unless="${admin}">
+                    <br>
+                    <a class="btn btn-primary" href="/settings" role="button">Settings</a>
+                </form>
+                <form class="form-horizontal">
+                    <br>
+                    <a class="btn btn-primary" href="/logout" role="button">Logout</a>
+                </form>
+
             </div>
-        </fieldset>
-    </form>
+        </div>
+    </div>
 
     <script crossorigin="anonymous"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
     </script>
 
-</div>
 </body>
 </html>
