--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -7,60 +8,156 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" rel="stylesheet">
     <meta name="google-site-verification" content="vamyONGQZ_-qGiK7pbzqhtPkjxevdNbTG2HUETKyszA" />
+
+    <style>
+        .form-container{
+            background: #ecf0f3;
+            font-family: 'Nunito', sans-serif;
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
+        }
+
+        .form-container .form-icon{
+            color: #0d6efd;
+            font-size: 55px;
+            text-align: center;
+            line-height: 100px;
+            width: 100px;
+            height:100px;
+            margin: 0 auto 15px;
+            border-radius: 50px;
+            box-shadow: 7px 7px 10px #cbced1, -7px -7px 10px #fff;
+        }
+
+        .form-container .title{
+            color: #0d6efd;
+            font-size: 25px;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            text-align: center;
+            margin: 0 0 20px;
+        }
+
+        .form-container .alert-success{
+            color: #198754;
+            font-size: 20px;
+            font-weight: 500;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            text-align: center;
+            margin: 0 0 0px;
+        }
+
+        .form-container .alert-danger{
+            color: #dc3545;
+            font-size: 20px;
+            font-weight: 500;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            text-align: center;
+            margin: 0 0 0px;
+        }
+
+        .form-container .form-horizontal .form-group{ margin: 0 0 25px 0; }
+
+        .form-container .form-horizontal .form-group label{
+            font-size: 15px;
+            font-weight: 600;
+            text-transform: uppercase;
+        }
+
+        .form-container .form-horizontal .form-control{
+            color: #333;
+            background: #ecf0f3;
+            font-size: 15px;
+            height: 50px;
+            padding: 20px;
+            letter-spacing: 1px;
+            border: none;
+            border-radius: 50px;
+            box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
+            display: inline-block;
+            transition: all 0.3s ease 0s;
+        }
+
+        .form-container .form-horizontal .form-control:focus{
+            box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
+            outline: none;
+        }
+
+        .form-container .form-horizontal .form-control::placeholder{
+            color: #808080;
+            font-size: 14px;
+        }
+
+        .form-container .form-horizontal .btn{
+            color: #fff;
+            background-color: #0d6efd;
+            font-size: 15px;
+            font-weight: bold;
+            text-transform: uppercase;
+            width: 100%;
+            padding: 12px 15px 11px;
+            border-radius: 20px;
+            box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px #fff;
+            border: none;
+            transition: all 0.5s ease 0s;
+        }
+
+        .form-container .form-horizontal .btn:hover,
+        .form-container .form-horizontal .btn:focus{
+            color: #fff;
+            letter-spacing: 3px;
+            box-shadow: none;
+            outline: none;
+        }
+    </style>
+
 </head>
 <body>
 
-<div align="center">
+    <div class="container"><br></div>
 
-<div th:if="${param.error}">
-    <div class="alert alert-danger" role="alert">
-        <h3>Invalid username and/or password...</h3>
-    </div>
-</div>
+    <div class="container-fluid">
 
-<div th:if="${param.logout}">
-    <div class="alert alert-primary" role="alert">
-        <h3>You have been logged out...</h3>
-    </div>
-</div>
-
-<div th:if="${registered}">
-    <div class="alert alert-primary" role="alert">
-        <td><h4>Account with name: </h4></td>
-        <td><h3 th:text="${login}">Login</h3></td>
-        <td><h4> registered!</h4></td>
-    </div>
-</div>
-
-    <form class="form-horizontal" method="post" th:action="@{/j_spring_security_check}">
-        <fieldset>
-
-            <legend>Please, login to the Accounting...</legend>
-
-            <div class="form-group">
-                <label class="col-md-3 control-label" for="j_login"></label>
-                <div class="col-md-3">
-                    <input id="j_login" name="j_login" type="text" placeholder="Login" class="form-control input-md">
-                    <input id="j_password" name="j_password" type="password" placeholder="Password" class="form-control input-md">
-                </div>
+        <div class="col-md-4 offset-md-4">
+            <div class="form-container">
+                <!-- <div class="form-icon" ><img src="free-icon-save-money-3210072.png"></i></div> -->
+                <h3 class="title">Home accounting</h3>
+                <form class="form-horizontal" method="post" th:action="@{/j_spring_security_check}">
+                    <div class="form-group">
+                        <label>login</label>
+                        <input class="form-control" id="j_login" name="j_login" type="text" placeholder="login">
+                    </div>
+                    <div class="form-group">
+                        <label>password</label>
+                        <input class="form-control" id="j_password" name="j_password" type="password" placeholder="password">
+                    </div>
+                    <button type="submit" class="btn btn-default">Login</button>
+                </form>
+                <br>
+                <form class="form-horizontal">
+                        <a class="btn btn-default" href="/register" role="button">Register</a>
+                </form>
+                <br>
+                <form class="form-horizontal" th:if="${registered}">
+                    <h4 class="alert-success">Account registered</h4>
+                </form>
+                <form class="form-horizontal" th:if="${param.logout}">
+                    <h4 class="alert-success">You have been logged out</h4>
+                </form>
+                <form class="form-horizontal" th:if="${param.error}">
+                    <h4 class="alert-danger">Invalid login and/or password</h4>
+                </form>
             </div>
-            <br>
-
-            <!-- Buttons -->
-            <div class="form-group">
-                <label class="col-md-4 control-label" for="submit"></label>
-                <div class="col-md-4">
-                    <td><button type="submit" id="submit" name="submit" class="btn btn-primary">Sign In</button></td>
-                    <td><a class="btn btn-primary" href="/register" role="button">New user</a></td>
-                </div>
-            </div>
-         </fieldset>
-    </form>
+        </div>
+    </div>
 
     <script crossorigin="anonymous"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
     </script>
-</div>
 </body>
 </html>
