--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,53 +4,161 @@
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1" name="viewport">
         <title>Register new User</title>
-        <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-                integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-                rel="stylesheet">
+        <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" rel="stylesheet">
+<!--    <link rel="stylesheet" href="https://e6t7a8v2.stackpathcdn.com/tutorial/css/fontawesome-all.min.css">-->
+        <meta name="google-site-verification" content="vamyONGQZ_-qGiK7pbzqhtPkjxevdNbTG2HUETKyszA" />
+
+        <style>
+            .form-container {
+                background: #ecf0f3;
+                font-family: 'Nunito', sans-serif;
+                padding: 40px;
+                border-radius: 20px;
+                box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
+            }
+        
+            .form-container .form-icon {
+                color: #0d6efd;
+                font-size: 55px;
+                text-align: center;
+                line-height: 100px;
+                width: 100px;
+                height: 100px;
+                margin: 0 auto 15px;
+                border-radius: 50px;
+                box-shadow: 7px 7px 10px #cbced1, -7px -7px 10px #fff;
+            }
+        
+            .form-container .title {
+                color: #0d6efd;
+                font-size: 25px;
+                font-weight: 700;
+                text-transform: uppercase;
+                letter-spacing: 1px;
+                text-align: center;
+                margin: 0 0 20px;
+            }
+        
+            .form-container .alert-success {
+                color: #198754;
+                font-size: 20px;
+                font-weight: 500;
+                text-transform: uppercase;
+                letter-spacing: 1px;
+                text-align: center;
+                margin: 0 0 0px;
+            }
+        
+            .form-container .alert-danger {
+                color: #dc3545;
+                font-size: 20px;
+                font-weight: 500;
+                text-transform: uppercase;
+                letter-spacing: 1px;
+                text-align: center;
+                margin: 0 0 0px;
+            }
+        
+            .form-container .form-horizontal .form-group {
+                margin: 0 0 25px 0;
+            }
+        
+            .form-container .form-horizontal .form-group label {
+                font-size: 15px;
+                font-weight: 600;
+                text-transform: uppercase;
+            }
+        
+            .form-container .form-horizontal .form-control {
+                color: #333;
+                background: #ecf0f3;
+                font-size: 15px;
+                height: 50px;
+                padding: 20px;
+                letter-spacing: 1px;
+                border: none;
+                border-radius: 50px;
+                box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
+                display: inline-block;
+                transition: all 0.3s ease 0s;
+            }
+        
+            .form-container .form-horizontal .form-control:focus {
+                box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
+                outline: none;
+            }
+        
+            .form-container .form-horizontal .form-control::placeholder {
+                color: #808080;
+                font-size: 14px;
+            }
+        
+            .form-container .form-horizontal .btn {
+                color: #fff;
+                background-color: #0d6efd;
+                font-size: 15px;
+                font-weight: bold;
+                text-transform: uppercase;
+                width: 100%;
+                padding: 12px 15px 11px;
+                border-radius: 20px;
+                box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px #fff;
+                border: none;
+                transition: all 0.5s ease 0s;
+            }
+        
+            .form-container .form-horizontal .btn:hover,
+            .form-container .form-horizontal .btn:focus {
+                color: #fff;
+                letter-spacing: 3px;
+                box-shadow: none;
+                outline: none;
+            }
+
+            .input-margin {
+                margin-bottom: 5px;
+                margin-top: 5px;
+            }
+        </style>
     </head>
 <body>
-<div align="center">
 
-    <div th:if="${exists}">
-        <div class="alert alert-danger" role="alert">
-            <h3>Customer with this Login or E-mail exist!</h3>
-        </div>
-    </div>
-    <div th:if="${difPass}">
-        <div class="alert alert-danger" role="alert">
-            <h3>The entered passwords don't match!</h3>
-        </div>
-    </div>
+    <div class="container"><br></div>
 
-    <form class="form-horizontal" th:action="@{/register}" method="POST">
-        <fieldset>
-        <legend>Register new User</legend>
-        <!--Input-->
-        <div class="form-group">
-            <div class="col-md-4">
-                <input id="login" name="login" type="text" placeholder="Username / login" class="form-control input-md" required th:value="${login}">
-                <input id="email" name="email" type="email" placeholder="E-mail" class="form-control input-md" required th:value="${email}">
-                <input id="password" name="password" type="password" placeholder="Password" class="form-control input-md" required pattern=".{3,}">
-                <input id="passwordConfirm" name="passwordConfirm" type="password" placeholder="Confirm password" class="form-control input-md" required pattern=".{3,}">
-                <input id="phone" name="phone" type="text" placeholder="Mobile phone" class="form-control input-md" th:value="${phone}">
-                <input id="address" name="address" type="text" placeholder="Address" class="form-control input-md" th:value="${address}">
+    <div class="container-fluid">
+
+        <div class="col-md-4 offset-md-4">
+            <div class="form-container">
+                <!-- <div class="form-icon" ><img src="free-icon-save-money-3210072.png"></i></div> -->
+                <h3 class="title">Create new user</h3>
+                <form class="form-horizontal " th:action="@{/register}" method="POST">
+                    <div class="form-group">
+                        <input id="login" name="login" type="text" placeholder="username / login" class="form-control input-margin" required th:value="${login}"><br>
+                        <input id="email" name="email" type="email" placeholder="e-mail" class="form-control input-margin" required th:value="${email}"><br>
+                        <input id="password" name="password" type="password" placeholder="password" class="form-control input-margin" required pattern=".{3,}"><br>
+                        <input id="passwordConfirm" name="passwordConfirm" type="password" placeholder="confirm password" class="form-control input-margin" required pattern=".{3,}"><br>
+                        <input id="phone" name="phone" type="text" placeholder="mobile phone" class="form-control input-margin" th:value="${phone}"><br>
+                        <input id="address" name="address" type="text" placeholder="address" class="form-control input-margin" th:value="${address}"><br>
+                    </div>
+
+                    <button type="submit" class="btn btn-default">Create new User</button>
+                </form>
+                <br>
+                <form class="form-horizontal" th:if="${admin}">
+                    <a class="btn btn-default" href="/admin" role="button">Cancel</a>
+                </form>
+                <form class="form-horizontal" th:unless="${admin}">
+                    <a class="btn btn-default" href="/login" role="button">Cancel</a>
+                </form>
+                <br>
+                <form class="form-horizontal" th:if="${exists}">
+                    <h4 class="alert-danger">Customer with this Login or E-mail exist</h4>
+                </form>
+                <form class="form-horizontal" th:if="${difPass}">
+                    <h4 class="alert-danger">The entered passwords don't match</h4>
+                </form>
             </div>
-        </div>
-        <!-- Button -->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="register"></label>
-            <div class="col-md-8">
-                <button type="submit" id="register" name="submit" class="btn btn-success">Create new User</button>
-            </div>
-        </div>
-        </fieldset>
-    </form>
-
-    <div class="form-group">
-        <label class="col-md-4 control-label" for="register"></label>
-        <div class="col-md-8">
-            <button class="btn btn-primary" id="back" name="back" onclick="history.back()">Backward</button>
-            <a class="btn btn-primary" href="/home" role="button">Home Page</a>
         </div>
     </div>
 
@@ -58,6 +166,5 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
     </script>
-</div>
 </body>
 </html>
