--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -36,7 +36,7 @@
             <div class="col-md-8">
                 <a class="btn btn-primary" href="/accounting" role="button">Accounting</a>
                 <a class="btn btn-primary" href="/home" role="button">Home Page</a>
-                <a class="btn btn-primary" href="/logout" role="button">Sign Out</a>
+                <a class="btn btn-primary" href="/logout" role="button">Logout</a>
             </div>
             <hr>
         </div>
