--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -155,6 +155,14 @@
         </div>
     </div>
 
+<!--    <script>-->
+<!--        var x = new Date();-->
+<!--        var currentTimeZoneOffsetInHours = x.getTimezoneOffset() / 60 * -1;-->
+<!--        const inputElement = document.querySelector('#offset');-->
+<!--        inputElement.value = currentTimeZoneOffsetInHours;-->
+
+<!--    </script>-->
+
     <script crossorigin="anonymous"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
