Add currency rates to 'Currency exchange' page  + new view 'Currency exchange' and 'Transfer money' pages

--- a/src/main/resources/templates/accounting.html
+++ b/src/main/resources/templates/accounting.html
@@ -163,14 +163,14 @@
                 <table class="table table-striped" border="1">
                     <tr>
                         <td></td>
-                        <td>Date</td>
-                        <td>Account name</td>
-                        <td>Payment category</td>
-                        <td>Description</td>
-                        <td align="center">Direction</td>
-                        <td align="center">Status</td>
-                        <td align="center">Currency</td>
-                        <td align="center">Amount</td>
+                        <td><b>Date</b></td>
+                        <td><b>Account name</b></td>
+                        <td><b>Payment category</b></td>
+                        <td><b>Description</b></td>
+                        <td align="center"><b>Direction</b></td>
+                        <td align="center"><b>Status</b></td>
+                        <td align="center"><b>Currency</b></td>
+                        <td align="center"><b>Amount</b></td>
                         <td></td>
                     </tr>
                     <th:block th:each="payment : ${payments}">
@@ -193,9 +193,7 @@
         </div>
     </div>
 
-    <!-- <div class="split right centered">
-        
-    </div> -->
+    <!-- <div class="split right centered">...</div> -->
 
     <script crossorigin="anonymous"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
