--- a/src/main/resources/templates/transfer.html
+++ b/src/main/resources/templates/transfer.html
@@ -7,56 +7,165 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
           rel="stylesheet">
+    <style>
+        .form-container {
+            background: #ecf0f3;
+            font-family: 'Nunito', sans-serif;
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
+        }
+
+        .form-container .form-icon {
+            color: #0d6efd;
+            font-size: 55px;
+            text-align: center;
+            line-height: 100px;
+            width: 100px;
+            height: 100px;
+            margin: 0 auto 15px;
+            border-radius: 50px;
+            box-shadow: 7px 7px 10px #cbced1, -7px -7px 10px #fff;
+        }
+
+        .form-container .title {
+            color: #0d6efd;
+            font-size: 25px;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            text-align: center;
+            margin: 0 0 20px;
+        }
+
+        .form-container .alert-success {
+            color: #198754;
+            font-size: 20px;
+            font-weight: 500;
+            text-transform: none;
+            letter-spacing: 1px;
+            text-align: center;
+            margin: 0 0 0px;
+        }
+
+        .form-container .alert-danger {
+            color: #dc3545;
+            font-size: 20px;
+            font-weight: 500;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            text-align: center;
+            margin: 0 0 0px;
+        }
+
+        .form-container .form-horizontal .form-group {
+            margin: 0 0 25px 0;
+        }
+
+        .form-container .form-horizontal .form-group label {
+            font-size: 15px;
+            font-weight: 600;
+            text-transform: uppercase;
+        }
+
+        .form-container .form-horizontal .form-control {
+            color: #333;
+            background: #ecf0f3;
+            font-size: 15px;
+            height: 60px;
+            padding: 20px;
+            letter-spacing: 1px;
+            border: none;
+            border-radius: 50px;
+            box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
+            display: inline-block;
+            transition: all 0.3s ease 0s;
+        }
+
+        .form-container .form-horizontal .form-control:focus {
+            box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
+            outline: none;
+        }
+
+        .form-container .form-horizontal .form-control::placeholder {
+            color: #808080;
+            font-size: 14px;
+        }
+
+        .form-container .form-horizontal .btn {
+            color: #fff;
+            background-color: #0d6efd;
+            font-size: 15px;
+            font-weight: bold;
+            text-transform: uppercase;
+            width: 100%;
+            padding: 12px 15px 11px;
+            border-radius: 20px;
+            box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px #fff;
+            border: none;
+            transition: all 0.5s ease 0s;
+        }
+
+        .form-container .form-horizontal .btn:hover,
+        .form-container .form-horizontal .btn:focus {
+            color: #fff;
+            letter-spacing: 3px;
+            box-shadow: none;
+            outline: none;
+        }
+
+        .input-margin {
+            margin-bottom: 5px;
+            margin-top: 5px;
+        }
+    </style>
 </head>
 <body>
-<div align="center">
+    <div class="container"><br></div>
 
-    <div th:if="${statusMsg} != null">
-        <div class="alert alert-danger" role="alert">
-            <h3><span th:text="${statusMsg}"></span></h3>
-        </div>
-    </div>
+    <div class="container-fluid">
 
-    <form class="form-horizontal" th:action="@{/transfer}" method="POST">
-        <fieldset>
-            <legend>Transfer money</legend>
-            <!--Input-->
-            <div class="form-group">
-                <div class="col-md-4">
-                    <input id="dateTime" name="dateTime" type="datetime-local" class="form-control input-md" th:required="required" >
-                    <select class="selectpicker form-control form-group" name="srcAccountName"  th:required="required">
-                        <option value="">Select source account</option>
-                        <div th:each="account: ${accounts}">
-                            <option th:value="${account.name}" th:text="${account.name} + ' - (' +
-                            ${#numbers.formatDecimal(balances.get(account.id) , 1, 2, 'POINT')} + ' ' +
-                            ${account.currencyName} + ') - '+ ${account.description}">
-                            </option>                        </div>
-                    </select>
-                    <select class="selectpicker form-control form-group" name="dstAccountName"  th:required="required">
-                        <option value="">Select target account</option>
-                        <div th:each="account: ${accounts}">
-                            <option th:value="${account.name}" th:text="${account.name} + ' - (' +
-                            ${#numbers.formatDecimal(balances.get(account.id) , 1, 2, 'POINT')} + ' ' +
-                            ${account.currencyName} + ') - '+ ${account.description}">
-                            </option>                        </div>
-                    </select>
-                    <input id="amount" name="amount" type="number" step="0.01" min="0" placeholder="0.00" class="form-control input-md">
-                </div>
+        <div class="col-md-4 offset-md-4">
+            <div class="form-container">
+                <!-- <div class="form-icon" ><img src="free-icon-save-money-3210072.png"></i></div> -->
+                <h3 class="title">Transfer money</h3>
+
+                <form class="form-horizontal " th:action="@{/transfer}" method="POST">
+                    <div class="form-group">
+                        <input id="dateTime" name="dateTime" type="datetime-local" class="form-control input-margin" th:required="required"></p>
+                        <select class="selectpicker form-control form-group" name="srcAccountName"  th:required="required">
+                            <option value="">Select source account</option>
+                            <div th:each="account: ${accounts}">
+                                <option th:value="${account.name}" th:text="${account.name} + ' - (' +
+                                ${#numbers.formatDecimal(balances.get(account.id) , 1, 2, 'POINT')} + ' ' +
+                                ${account.currencyName} + ') - '+ ${account.description}">
+                                </option>
+                            </div>
+                        </select>
+                        <select class="selectpicker form-control form-group" name="dstAccountName"  th:required="required">
+                            <option value="">Select target account</option>
+                            <div th:each="account: ${accounts}">
+                                <option th:value="${account.name}" th:text="${account.name} + ' - (' +
+                                ${#numbers.formatDecimal(balances.get(account.id) , 1, 2, 'POINT')} + ' ' +
+                                ${account.currencyName} + ') - '+ ${account.description}">
+                                </option>
+                            </div>
+                        </select>
+                        <input id="amount" name="amount" type="number" step="0.01" min="0" placeholder="0.00" class="form-control">
+                    </div>
+                    <button type="submit" class="btn btn-default">Transfer</button>
+                </form>
+                <br>
+                <form class="form-horizontal">
+                    <a class="btn btn-default" href="/accounting" role="button">Cancel</a>
+                </form>
+
+                <br>
+                <form class="form-horizontal" th:if="${statusMsg}">
+                    <h4 class="alert-danger"><span th:text="${statusMsg}"></span></h4>
+                </form>
+
             </div>
-            <!-- Button -->
-            <div class="form-group">
-                <label class="col-md-4 control-label" for="transfer"></label>
-                <div class="col-md-8">
-                    <button type="submit" id="transfer" name="transfer" class="btn btn-success">Send money</button>
-                </div>
-            </div>
-        </fieldset>
-    </form>
-
-    <div class="form-group">
-        <label class="col-md-4 control-label"></label>
-        <div class="col-md-8">
-            <a class="btn btn-primary" href="/accounting" role="button">Cancel</a>
         </div>
     </div>
 
@@ -64,6 +173,5 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
     </script>
-</div>
 </body>
 </html>
