--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -29,21 +29,21 @@
 </head>
 <body>
                                     <!--    Heder   -->
-    <div align="center" class="row">
+    <div style="text-align: center" class="row">
         <div class="form-group">
             <label class="col-md-4 control-label"></label>
             <hr>
             <div class="col-md-8">
                 <a class="btn btn-primary" href="/accounting" role="button">Accounting</a>
                 <a class="btn btn-primary" href="/home" role="button">Home Page</a>
-                <a class="btn btn-primary" href="/logout" role="button">Logout</a>
+                <a class="btn btn-primary" href="/logout" role="button">Log out</a>
             </div>
             <hr>
         </div>
     </div>
 
                                     <!--    Main    -->
-    <div align="center" class="row">
+    <div style="text-align: center" class="row">
 
         <div class="column-small"></div>
 
