--- a/src/main/resources/templates/todo.html
+++ b/src/main/resources/templates/todo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div align="center">
+<div style="text-align: center">
     <h3>
         <span th:text="'Page is under development.'"></span>
     </h3>
