--- a/src/main/resources/templates/updateForAdmin.html
+++ b/src/main/resources/templates/updateForAdmin.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
->
+ lang="en">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -10,7 +10,7 @@
           rel="stylesheet">
 </head>
 <body>
-<div align="center">
+<div style="text-align: center">
 
     <div th:if="${exists}">
         <div class="alert alert-danger" role="alert">
