--- a/src/main/resources/templates/accountsStatistic.html
+++ b/src/main/resources/templates/accountsStatistic.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -13,140 +13,137 @@
             display: flex;
         }
         .column-left {
-            flex: 20%;
+            flex: 25%;
         }
         .column-center {
             flex: 50%;
         }
         .column-right {
-            flex: 20%;
-        }
-        .column-small {
-            flex: 5%;
+            flex: 25%;
         }
     </style>
 
 </head>
 <body>
-<!--    Heder   -->
-<div align="center" class="row">
-    <div class="form-group">
-        <label class="col-md-4 control-label"></label>
-        <hr>
-        <div class="col-md-8">
-            <a class="btn btn-primary" href="/accounting" role="button">Accounting</a>
-            <a class="btn btn-primary" href="/home" role="button">Home Page</a>
-            <a class="btn btn-primary" href="/settings" role="button">Settings</a>
+    <!--    Heder   -->
+    <div style="text-align: center" class="row">
+        <div class="form-group">
+            <label class="col-md-4 control-label"></label>
+            <hr>
+            <div class="col-md-8">
+                <a class="btn btn-primary" href="/accounting" role="button">Accounting</a>
+                <a class="btn btn-primary" href="/home" role="button">Home Page</a>
+                <a class="btn btn-primary" href="/settings" role="button">Settings</a>
+            </div>
+            <hr>
         </div>
-        <hr>
     </div>
-</div>
 
 <!--    Main    -->
-<div align="center" class="row">
+    <div style="text-align: center" class="row">
 
-    <div class="column-small"></div>
+        <div class="column-small"></div>
 
-    <div class="column-left"></div>
+        <div class="column-left"></div>
 
-    <div class="column-center">
-        <h4>Accounts statistic</h4>
-        <br>
-        <form action="#">
-            <table class="table table-striped" border="1">
-                <tr>
-                    <td><b>Account name</b></td>
-                    <td><b>Description</b></td>
-                    <td align="center"><b>Account type</b></td>
-                    <td align="center"><b>Currency</b></td>
-                    <td align="right"><b>Balance</b></td>
-                </tr>
-                <th:block th:each="account : ${accountsUAH}">
+        <div class="column-center">
+            <h4>Accounts statistic</h4>
+            <br>
+            <form action="#">
+                <table class="table table-striped" border="1">
                     <tr>
-                        <td th:text ="${account.name}">...</td>
-                        <td th:text ="${account.description}">...</td>
-                        <td align="center" th:text ="${account.type}">...</td>
-                        <td align="center" th:text ="${account.currencyName}">...</td>
-                        <td align="right"
-                            th:style="${balances.get(account.id) < 0 ? 'color : #dc3545' : 'color : #000'}"
-                            th:text ="${#numbers.formatDecimal(balances.get(account.id) , 1, 2, 'POINT')}">...
-                        </td>
+                        <td><b>Account name</b></td>
+                        <td><b>Description</b></td>
+                        <td style="text-align: center"><b>Account type</b></td>
+                        <td style="text-align: center"><b>Currency</b></td>
+                        <td style="text-align: right"><b>Balance</b></td>
                     </tr>
-                </th:block>
-                <tr>
-                    <td colspan="3"></td>
-                    <td align="right"><b>Total UAH</b></td>
-                    <td align="right" th:style="${'font-weight: bold'} + '; ' +
-                                                ${totalUAH < 0 ? 'color : #dc3545' : 'color : #000'}"
-                        th:text="${#numbers.formatDecimal(totalUAH , 1, 2, 'POINT')}"></td>
-                </tr>
-                <tr><td colspan="5"></td></tr>
-                <tr>
-                    <td><b>Account name</b></td>
-                    <td><b>Description</b></td>
-                    <td align="center"><b>Account type</b></td>
-                    <td align="center"><b>Currency</b></td>
-                    <td align="right"><b>Balance</b></td>
-                </tr>
-                <th:block th:each="account : ${accountsEUR}">
+                    <th:block th:each="account : ${accountsUAH}">
+                        <tr>
+                            <td th:text ="${account.name}">...</td>
+                            <td th:text ="${account.description}">...</td>
+                            <td style="text-align: center" th:text ="${account.type}">...</td>
+                            <td style="text-align: center" th:text ="${account.currencyName}">...</td>
+                            <td style="text-align: right"
+                                th:style="${balances.get(account.id) < 0 ? 'color : #dc3545' : 'color : #000'}"
+                                th:text ="${#numbers.formatDecimal(balances.get(account.id) , 1, 2, 'POINT')}">...
+                            </td>
+                        </tr>
+                    </th:block>
                     <tr>
-                        <td th:text ="${account.name}">...</td>
-                        <td th:text ="${account.description}">...</td>
-                        <td align="center" th:text ="${account.type}">...</td>
-                        <td align="center" th:text ="${account.currencyName}">...</td>
-                        <td align="right"
-                            th:style="${balances.get(account.id) < 0 ? 'color : #dc3545' : 'color : #000'}"
-                            th:text ="${#numbers.formatDecimal(balances.get(account.id) , 1, 2, 'POINT')}">...
-                        </td>
+                        <td colspan="3"></td>
+                        <td style="text-align: right"><b>Total UAH</b></td>
+                        <td style="text-align: right" th:style="${'font-weight: bold'} + '; ' +
+                                                    ${totalUAH < 0 ? 'color : #dc3545' : 'color : #000'}"
+                            th:text="${#numbers.formatDecimal(totalUAH , 1, 2, 'POINT')}"></td>
                     </tr>
-                </th:block>
-                <tr>
-                    <td colspan="3"></td>
-                    <td align="right"><b>Total EUR</b></td>
-                    <td align="right" th:style="${'font-weight: bold'} + '; ' +
-                                                ${totalEUR < 0 ? 'color : #dc3545' : 'color : #000'}"
-                        th:text="${#numbers.formatDecimal(totalEUR , 1, 2, 'POINT')}"></td>
-                </tr>
-                <tr><td colspan="5"></td></tr>
-                <tr>
-                    <td><b>Account name</b></td>
-                    <td><b>Description</b></td>
-                    <td align="center"><b>Account type</b></td>
-                    <td align="center"><b>Currency</b></td>
-                    <td align="right"><b>Balance</b></td>
-                </tr>
-                <th:block th:each="account : ${accountsUSD}">
+                    <tr><td colspan="5"></td></tr>
                     <tr>
-                        <td th:text ="${account.name}">...</td>
-                        <td th:text ="${account.description}">...</td>
-                        <td align="center" th:text ="${account.type}">...</td>
-                        <td align="center" th:text ="${account.currencyName}">...</td>
-                        <td align="right"
-                            th:style="${balances.get(account.id) < 0 ? 'color : #dc3545' : 'color : #000'}"
-                            th:text ="${#numbers.formatDecimal(balances.get(account.id) , 1, 2, 'POINT')}">...
-                        </td>
+                        <td><b>Account name</b></td>
+                        <td><b>Description</b></td>
+                        <td style="text-align: center"><b>Account type</b></td>
+                        <td style="text-align: center"><b>Currency</b></td>
+                        <td style="text-align: right"><b>Balance</b></td>
                     </tr>
-                </th:block>
-                <tr>
-                    <td colspan="3"></td>
-                    <td align="right"><b>Total USD</b></td>
-                    <td align="right" th:style="${'font-weight: bold'} + '; ' +
-                                                ${totalUSD < 0 ? 'color : #dc3545' : 'color : #000'}"
-                        th:text="${#numbers.formatDecimal(totalUSD , 1, 2, 'POINT')}"></td>
-                </tr>
-            </table>
+                    <th:block th:each="account : ${accountsEUR}">
+                        <tr>
+                            <td th:text ="${account.name}">...</td>
+                            <td th:text ="${account.description}">...</td>
+                            <td style="text-align: center" th:text ="${account.type}">...</td>
+                            <td style="text-align: center" th:text ="${account.currencyName}">...</td>
+                            <td style="text-align: right"
+                                th:style="${balances.get(account.id) < 0 ? 'color : #dc3545' : 'color : #000'}"
+                                th:text ="${#numbers.formatDecimal(balances.get(account.id) , 1, 2, 'POINT')}">...
+                            </td>
+                        </tr>
+                    </th:block>
+                    <tr>
+                        <td colspan="3"></td>
+                        <td style="text-align: right"><b>Total EUR</b></td>
+                        <td style="text-align: right" th:style="${'font-weight: bold'} + '; ' +
+                                                    ${totalEUR < 0 ? 'color : #dc3545' : 'color : #000'}"
+                            th:text="${#numbers.formatDecimal(totalEUR , 1, 2, 'POINT')}"></td>
+                    </tr>
+                    <tr><td colspan="5"></td></tr>
+                    <tr>
+                        <td><b>Account name</b></td>
+                        <td><b>Description</b></td>
+                        <td style="text-align: center"><b>Account type</b></td>
+                        <td style="text-align: center"><b>Currency</b></td>
+                        <td style="text-align: right"><b>Balance</b></td>
+                    </tr>
+                    <th:block th:each="account : ${accountsUSD}">
+                        <tr>
+                            <td th:text ="${account.name}">...</td>
+                            <td th:text ="${account.description}">...</td>
+                            <td style="text-align: center" th:text ="${account.type}">...</td>
+                            <td style="text-align: center" th:text ="${account.currencyName}">...</td>
+                            <td style="text-align: right"
+                                th:style="${balances.get(account.id) < 0 ? 'color : #dc3545' : 'color : #000'}"
+                                th:text ="${#numbers.formatDecimal(balances.get(account.id) , 1, 2, 'POINT')}">...
+                            </td>
+                        </tr>
+                    </th:block>
+                    <tr>
+                        <td colspan="3"></td>
+                        <td style="text-align: right"><b>Total USD</b></td>
+                        <td style="text-align: right" th:style="${'font-weight: bold'} + '; ' +
+                                                    ${totalUSD < 0 ? 'color : #dc3545' : 'color : #000'}"
+                            th:text="${#numbers.formatDecimal(totalUSD , 1, 2, 'POINT')}"></td>
+                    </tr>
+                </table>
 
-        </form>
+            </form>
+        </div>
+
+        <div class="column-right"></div>
+
+        <div class="column-small"></div>
+
+        <script crossorigin="anonymous"
+                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
+        </script>
     </div>
-
-    <div class="column-right"></div>
-
-    <div class="column-small"></div>
-
-    <script crossorigin="anonymous"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
-    </script>
-</div>
 </body>
 </html>
