--- a/src/main/resources/templates/addNewPayment.html
+++ b/src/main/resources/templates/addNewPayment.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -7,60 +7,166 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
           rel="stylesheet">
+    <style>
+        .form-container {
+            background: #ecf0f3;
+            font-family: 'Nunito', sans-serif;
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
+        }
+
+        .form-container .form-icon {
+            color: #0d6efd;
+            font-size: 55px;
+            text-align: center;
+            line-height: 100px;
+            width: 100px;
+            height: 100px;
+            margin: 0 auto 15px;
+            border-radius: 50px;
+            box-shadow: 7px 7px 10px #cbced1, -7px -7px 10px #fff;
+        }
+
+        .form-container .title {
+            color: #0d6efd;
+            font-size: 25px;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            text-align: center;
+            margin: 0 0 20px;
+        }
+
+        .form-container .alert-success {
+            color: #198754;
+            font-size: 20px;
+            font-weight: 500;
+            text-transform: none;
+            letter-spacing: 1px;
+            text-align: center;
+            margin: 0 0 0;
+        }
+
+        .form-container .alert-danger {
+            color: #dc3545;
+            font-size: 20px;
+            font-weight: 500;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            text-align: center;
+            margin: 0 0 0;
+        }
+
+        .form-container .form-horizontal .form-group {
+            margin: 0 0 25px 0;
+        }
+
+        .form-container .form-horizontal .form-group label {
+            font-size: 15px;
+            font-weight: 600;
+            text-transform: uppercase;
+        }
+
+        .form-container .form-horizontal .form-control {
+            color: #333;
+            background: #ecf0f3;
+            font-size: 15px;
+            height: 60px;
+            padding: 20px;
+            letter-spacing: 1px;
+            border: none;
+            border-radius: 50px;
+            box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
+            display: inline-block;
+            transition: all 0.3s ease 0s;
+        }
+
+        .form-container .form-horizontal .form-control:focus {
+            box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px #fff;
+            outline: none;
+        }
+
+        .form-container .form-horizontal .form-control::placeholder {
+            color: #808080;
+            font-size: 14px;
+        }
+
+        .form-container .form-horizontal .btn {
+            color: #fff;
+            background-color: #0d6efd;
+            font-size: 15px;
+            font-weight: bold;
+            text-transform: uppercase;
+            width: 100%;
+            padding: 12px 15px 11px;
+            border-radius: 20px;
+            box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px #fff;
+            border: none;
+            transition: all 0.5s ease 0s;
+        }
+
+        .form-container .form-horizontal .btn:hover,
+        .form-container .form-horizontal .btn:focus {
+            color: #fff;
+            letter-spacing: 3px;
+            box-shadow: none;
+            outline: none;
+        }
+
+        .input-margin {
+            margin-bottom: 5px;
+            margin-top: 5px;
+        }
+    </style>
 </head>
 <body>
-<div align="center">
+    <div class="container"><br></div>
 
-    <form class="form-horizontal" th:action="@{/addNewPayment}" method="POST">
-        <fieldset>
-            <legend>Add new Payment</legend>
-            <!--Input-->
-            <div class="form-group">
-                <div class="col-md-4">
-                    <input id="date" name="dateTime" type="datetime-local" class="form-control input-md" required >
-                    <select class="selectpicker form-control form-group" name="accountName"  th:required="required">
-                        <option value="">Select account</option>
-                        <div th:each="account: ${accounts}">
-                            <option th:value="${account.name}" th:text="${account.name} + ' - (' +
-                            ${#numbers.formatDecimal(balances.get(account.id) , 1, 2, 'POINT')} + ' ' +
-                            ${account.currencyName} + ') - '+ ${account.description}">
-                            </option>
-                        </div>
-                    </select>
-                    <select class="selectpicker form-control form-group" name="paymentCategoryName"  th:required="required">
-                        <option value="">Select payment category</option>
-                        <div th:each="paymentCategory: ${paymentCategories}">
-                            <option th:value="${paymentCategory.name}" th:text="${paymentCategory.name+' - '+paymentCategory.description}"></option>
-                        </div>
-                    </select>
-                    <input id="description" name="description" type="text" placeholder="Payment description" class="form-control input-md">
-                    <select class="selectpicker form-control form-group" name="direction"  th:required="required">
-                        <option value="">Select direction</option>
-                        <option value="true" text="">IN</option>
-                        <option value="false" text="">OUT</option>
-                    </select>
-                    <select class="selectpicker form-control form-group" name="status"  th:required="required">
-                        <option value="">Select status</option>
-                        <option value="true" text="">Completed</option>
-                        <option value="false" text="">Scheduled</option>
-                    </select>
-                    <input id="amount" name="amount" type="number" step="0.01" min="0" placeholder="0.00" class="form-control input-md">
-                </div>
+    <div class="container-fluid">
+        <div class="col-md-4 offset-md-4">
+            <div class="form-container">
+                <h3 class="title">Add new Payment</h3>
+                <form class="form-horizontal " th:action="@{/addNewPayment}" method="POST">
+                    <div class="form-group">
+                        <input id="date" name="dateTime" type="datetime-local" class="form-control input-margin" required >
+                        <select class="selectpicker form-control input-margin" name="accountName"  th:required="required">
+                            <option value="">Select account</option>
+                            <div th:each="account: ${accounts}">
+                                <option th:value="${account.name}" th:text="${account.name} + ' - (' +
+                                    ${#numbers.formatDecimal(balances.get(account.id) , 1, 2, 'POINT')} + ' ' +
+                                    ${account.currencyName} + ') - '+ ${account.description}">
+                                </option>
+                            </div>
+                        </select>
+                        <select class="selectpicker form-control input-margin" name="paymentCategoryName"  th:required="required">
+                            <option value="">Select payment category</option>
+                            <div th:each="paymentCategory: ${paymentCategories}">
+                                <option th:value="${paymentCategory.name}" th:text="${paymentCategory.name+' - '+
+                                    paymentCategory.description}">
+                                </option>
+                            </div>
+                        </select>
+                        <input id="description" name="description" type="text" placeholder="Payment description" class="form-control input-margin">
+                        <select class="selectpicker form-control input-margin" name="direction"  th:required="required">
+                            <option value="">Select direction</option>
+                            <option value="true" text="">IN</option>
+                            <option value="false" text="">OUT</option>
+                        </select>
+                        <select class="selectpicker form-control input-margin" name="status"  th:required="required">
+                            <option value="">Select status</option>
+                            <option value="true" text="">Completed</option>
+                            <option value="false" text="">Scheduled</option>
+                        </select>
+                        <input id="amount" name="amount" type="number" step="0.01" min="0" placeholder="0.00" class="form-control input-margin">
+                    </div>
+                    <button type="submit" id="addNewAccount" name="addNewAccount" class="btn btn-default">Add new Payment</button>
+                </form>
+                <br>
+                <form class="form-horizontal">
+                    <a class="btn btn-default" href="/accounting" role="button">Cancel</a>
+                </form>
             </div>
-            <!-- Button -->
-            <div class="form-group">
-                <label class="col-md-4 control-label" for="addNewPayment"></label>
-                <div class="col-md-8">
-                    <button type="submit" id="addNewPayment" name="addNewPayment" class="btn btn-success">Add new Payment</button>
-                </div>
-            </div>
-        </fieldset>
-    </form>
-
-    <div class="form-group">
-        <label class="col-md-4 control-label"></label>
-        <div class="col-md-8">
-            <a class="btn btn-primary" href="/accounting" role="button">Cancel</a>
         </div>
     </div>
 
@@ -68,8 +174,5 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
     </script>
-
-</div>
-
 </body>
 </html>
