--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="https://www.thymeleaf.org">
+      xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Admin Page</title>
-
-
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" rel="stylesheet">
 
@@ -14,7 +12,6 @@
             .row {
             display: flex;
             }
-
             .column {
             flex: 25%;
             }
@@ -22,20 +19,20 @@
 </head>
 <body>
 
-<!--    Heder   -->
-<div align="center" class="row">
-    <div class="form-group">
-        <label class="col-md-4 control-label"></label>
-        <hr>
-        <div class="col-md-8">
-            <a class="btn btn-primary" href="/home" role="button">Home Page</a>
-            <a class="btn btn-primary" href="/logout" role="button">Sign Out</a>
+    <!--    Heder   -->
+    <div style="text-align: center" class="row">
+        <div class="form-group">
+            <label class="col-md-4 control-label"></label>
+            <hr>
+            <div class="col-md-8">
+                <a class="btn btn-primary" href="/home" role="button">Home Page</a>
+                <a class="btn btn-primary" href="/logout" role="button">Log Out</a>
+            </div>
+            <hr>
         </div>
-        <hr>
     </div>
-</div>
 
-<div align="center" class="row">
+<div style="text-align: center" class="row">
 
     <div class="column"></div>
 
@@ -52,7 +49,6 @@
                             </tr>
                         </th:block>
                     </table>
-
                     <div class="form-group">
                         <label class="col-md-4 control-label"></label>
                         <div class="col-md-8">
@@ -76,7 +72,6 @@
                     </tr>
                 </th:block>
             </table>
-
             <div class="form-group">
                 <label class="col-md-4 control-label"></label>
                 <div class="col-md-8">
@@ -84,9 +79,7 @@
                     <button type="submit" id="delete_category" name="delete_category" class="btn btn-primary">Delete Categories</button>
                 </div>
             </div>
-
         </form>
-
     </div>
 
     <div class="column"></div>
