--- a/src/main/resources/templates/currencyExchange.html
+++ b/src/main/resources/templates/currencyExchange.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -45,7 +45,7 @@
             text-transform: none;
             letter-spacing: 1px;
             text-align: center;
-            margin: 0 0 0px;
+            margin: 0 0 0;
         }
 
         .form-container .alert-danger {
@@ -55,7 +55,7 @@
             text-transform: uppercase;
             letter-spacing: 1px;
             text-align: center;
-            margin: 0 0 0px;
+            margin: 0 0 0;
         }
 
         .form-container .form-horizontal .form-group {
@@ -132,37 +132,37 @@
 
                 <form class="form-horizontal">
                     <h4 class="alert-success">
-                            <td align="right">UAH/EUR: </td>
-                            <td align="right">Sale </td>
-                            <td align="left" th:text ="${#numbers.formatDecimal(currencyRatesEUR.getSaleRate(), 1, 'COMMA', 2, 'POINT')}">45.12</td>
-                            <td align="right">Buy </td>
-                            <td align="left" th:text ="${#numbers.formatDecimal(currencyRatesEUR.getBuyRate(), 1, 'COMMA', 2, 'POINT')}">45.12</td>
+                            <td style="text-align: right">UAH/EUR: </td>
+                            <td style="text-align: right">Sell </td>
+                            <td style="text-align: left" th:text ="${#numbers.formatDecimal(currencyRatesEUR.getSaleRate(), 1, 'COMMA', 2, 'POINT')}">45.12</td>
+                            <td style="text-align: right">Buy </td>
+                            <td style="text-align: left" th:text ="${#numbers.formatDecimal(currencyRatesEUR.getBuyRate(), 1, 'COMMA', 2, 'POINT')}">45.12</td>
                     </h4>
                 </form>
                 <form class="form-horizontal">
                     <h4 class="alert-success">
-                            <td align="right">UAH/USD: </td>
-                            <td align="right">Sale </td>
-                            <td align="left" th:text ="${#numbers.formatDecimal(currencyRatesUSD.getSaleRate(), 1, 'COMMA', 2, 'POINT')}">46.12</td>
-                            <td align="right">Buy </td>
-                            <td align="left" th:text ="${#numbers.formatDecimal(currencyRatesUSD.getBuyRate(), 1, 'COMMA', 2, 'POINT')}">45.12</td>
+                            <td style="text-align: right">UAH/USD: </td>
+                            <td style="text-align: right">Sell </td>
+                            <td style="text-align: left" th:text ="${#numbers.formatDecimal(currencyRatesUSD.getSaleRate(), 1, 'COMMA', 2, 'POINT')}">46.12</td>
+                            <td style="text-align: right">Buy </td>
+                            <td style="text-align: left" th:text ="${#numbers.formatDecimal(currencyRatesUSD.getBuyRate(), 1, 'COMMA', 2, 'POINT')}">45.12</td>
                     </h4>
                 </form>
                 <form class="form-horizontal">
                     <h4 class="alert-success">
-                            <td align="right">USD/EUR: </td>
-                            <td align="right">Sale </td>
-                            <td align="left" th:text ="${#numbers.formatDecimal(currencyRatesEUR.getBuyRate()/currencyRatesUSD.getSaleRate(), 2, 'COMMA', 2, 'POINT')}">0.12</td>
-                            <td align="right">Buy </td>
-                            <td align="left" th:text ="${#numbers.formatDecimal(currencyRatesUSD.getBuyRate()/currencyRatesEUR.getSaleRate(), 2, 'COMMA', 2, 'POINT')}">1.12</td>
+                            <td style="text-align: right">USD/EUR: </td>
+                            <td style="text-align: right">Sell </td>
+                            <td style="text-align: left" th:text ="${#numbers.formatDecimal(currencyRatesEUR.getBuyRate()/currencyRatesUSD.getSaleRate(), 2, 'COMMA', 2, 'POINT')}">0.12</td>
+                            <td style="text-align: right">Buy </td>
+                            <td style="text-align: left" th:text ="${#numbers.formatDecimal(currencyRatesUSD.getBuyRate()/currencyRatesEUR.getSaleRate(), 2, 'COMMA', 2, 'POINT')}">1.12</td>
                     </h4>
                 </form>
                 <br>
 
                 <form class="form-horizontal " th:action="@{/currencyExchange}" method="POST">
                     <div class="form-group">
-                        <input id="dateTime" name="dateTime" type="datetime-local" class="form-control input-margin" th:required="required"></p>
-                        <select class="selectpicker form-control form-group" name="srcAccountName"  th:required="required">
+                        <input id="dateTime" name="dateTime" type="datetime-local" class="form-control input-margin" th:required="required">
+                        <select class="selectpicker form-control input-margin" name="srcAccountName"  th:required="required">
                             <option value="">Select source account</option>
                             <div th:each="account: ${accounts}">
                                 <option th:value="${account.name}" th:text="${account.name} + ' - (' +
@@ -171,7 +171,7 @@
                                 </option>
                             </div>
                         </select>
-                        <select class="selectpicker form-control form-group" name="dstAccountName"  th:required="required">
+                        <select class="selectpicker form-control input-margin" name="dstAccountName"  th:required="required">
                             <option value="">Select target account</option>
                             <div th:each="account: ${accounts}">
                                 <option th:value="${account.name}" th:text="${account.name} + ' - (' +
@@ -180,7 +180,7 @@
                                 </option>
                             </div>
                         </select>
-                        <input id="amount" name="amount" type="number" step="0.01" min="0" placeholder="0.00" class="form-control">
+                        <input id="amount" name="amount" type="number" step="0.01" min="0" placeholder="0.00" class="form-control input-margin">
                     </div>
                     <button type="submit" class="btn btn-default">Exchange</button>
                 </form>
