--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+      xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -9,7 +8,6 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" rel="stylesheet">
     <meta name="google-site-verification" content="vamyONGQZ_-qGiK7pbzqhtPkjxevdNbTG2HUETKyszA" />
-
     <style>
         .form-container{
             background: #ecf0f3;
@@ -48,7 +46,7 @@
             text-transform: uppercase;
             letter-spacing: 1px;
             text-align: center;
-            margin: 0 0 0px;
+            margin: 0 0 0;
         }
 
         .form-container .alert-danger{
@@ -58,7 +56,7 @@
             text-transform: uppercase;
             letter-spacing: 1px;
             text-align: center;
-            margin: 0 0 0px;
+            margin: 0 0 0;
         }
 
         .form-container .form-horizontal .form-group{ margin: 0 0 25px 0; }
@@ -118,14 +116,12 @@
 
 </head>
 <body>
-
     <div class="container"><br></div>
 
     <div class="container-fluid">
 
         <div class="col-md-4 offset-md-4">
             <div class="form-container">
-                <!-- <div class="form-icon" ><img src="free-icon-save-money-3210072.png"></i></div> -->
                 <h3 class="title">Home accounting</h3>
                 <form class="form-horizontal" th:if="${admin}">
                     <br>
@@ -137,17 +133,12 @@
                 </form>
                 <form class="form-horizontal" th:unless="${admin}">
                     <br>
-                    <a class="btn btn-primary" href="/todo" role="button">To-Do List</a>
-                </form>
-                <form class="form-horizontal" th:unless="${admin}">
-                    <br>
                     <a class="btn btn-primary" href="/settings" role="button">Settings</a>
                 </form>
                 <form class="form-horizontal">
                     <br>
-                    <a class="btn btn-primary" href="/logout" role="button">Logout</a>
+                    <a class="btn btn-primary" href="/logout" role="button">Log out</a>
                 </form>
-
             </div>
         </div>
     </div>
@@ -156,6 +147,5 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
     </script>
-
 </body>
 </html>
